testing/errors/.local-txtspm/lib/greeting.txts
IMPORT lib
ADD lib.greeting "Hello"
